--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ footer {
 	padding: .5em;
 	position: absolute;
 	bottom: 0;
+	font-family: Work Regular;
 }
 
 footer span {
@@ -194,7 +195,7 @@ footer span {
 	    position: absolute;
 	    left: 50%;
     	top: 10%;
-    	transform: rotate3d(1,0,0,-45deg) scale(2) translateX(-25%);
+    	transform: rotate3d(1,0,0,45deg) scale(2) translateX(-25%);
 	}
 	.hour {
 		height: 140px;
@@ -208,7 +209,7 @@ footer span {
 	}
 }
 
-@media screen and (min-width: 1367px) {
+@media screen and (min-width: 1440px) {
 	@keyframes stars{
 		0% {background-size: 100%, 100%;background-position-y: 400%, 100%;}
 		100% {background-size: 100%, 100%;background-position-y: 400%,200%;}
