--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ footer {
 	color: white;
 	width: 100%;
 	padding: .5em;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	font-family: Work Regular;
 }
