--- a/css/style.css
+++ b/css/style.css
@@ -7,61 +7,14 @@
   src: url(../fonts/WorkSans-Regular.ttf);
 }
 
-@keyframes stars{
-	0% {background-size: 100%, 100%;background-position-y: 100%, 100%;}
-	100% {background-size: 100%, 100%;background-position-y: 100%,0%;}
-}
-
-@keyframes morning {
-	0% {background-color:#000000;background-position-y: 100%, 100%;}
-	100% {background-color:#e09572;background-position-y: 100%, 100%;}
-}
-
-@keyframes afternoon {
-	0% {background-color:#e09572;background-position-y: 100%, 100%;}
-	100% {background-color:#e0bfb0;background-position-y: 100%, 100%;}
-}
-@keyframes evening {
-	0% {background-color:#e0bfb0;background-position-y: 100%, 100%;}
-	100% {background-color:#94624b;background-position-y: 100%, 100%;}
-}
-@keyframes night {
-	0% {background-color:#94624b;background-position-y: 100%, 100%;}
-	100% {background-color:#000000;background-position-y: 100%, 100%;}
-}
 
 * {
 	box-sizing: border-box;
 }
 
 html {
-	background: url('../img/background.png') bottom center fixed no-repeat, #000000;
+	background: url('../img/mars.png') bottom center fixed no-repeat, #000000;
 	background-size: 100%, 100%;
-}
-
-html.morning {
-	background: url('../img/background.png') bottom center fixed no-repeat,#e09572;
-	background-size: 100%, 100%;
-	animation: 2s morning ease-in-out forwards;
-}
-html.afternoon {
-	background: url('../img/background.png') bottom center fixed no-repeat,#e0bfb0;
-	background-size: 100%, 100%;
-	animation: 2s afternoon ease-in-out forwards;
-}
-html.evening {
-	background: url('../img/background.png') bottom center fixed no-repeat,#94624b;
-	background-size: 100%, 100%;
-	animation: 2s evening ease-in-out forwards;
-}
-html.night {
-	background: url('../img/background.png') bottom center fixed no-repeat,url('../img/stars.png');
-	background-size: 100%, 100%;
-	animation: 2s night ease-in-out forwards, 60s 2s stars linear infinite;
-}
-
-html.night #container {
-	opacity: 0.8;
 }
 
 body {
@@ -76,6 +29,20 @@ main {
 
 section {
 	overflow: hidden;
+	display: block;
+}
+
+
+#ripleyOuter {
+	position: absolute;
+	bottom: 0;
+	overflow: hidden;
+	width: 300px;
+	height: 300px;
+}
+#ripley {
+	position: absolute;
+	width: 300px;
 }
 
 footer {
@@ -90,9 +57,15 @@ footer {
 
 footer span {
 	cursor: pointer;
+	padding: .25em;
+	user-select: none;
 }
 
-#clock {
+footer span .longLabel {
+	display: none;
+}
+
+#digitalClock {
 	font-size: 4em;
 	font-family: 'Work Thin';
 	font-weight: 100;
@@ -103,7 +76,7 @@ footer span {
 	color: #ffffff;
 }
 
-#container{
+#analogClock{
   display: block;
   position: relative;
   background: url('../img/wijzerplaat.png') center center no-repeat;
@@ -116,7 +89,7 @@ footer span {
   justify-content: center;
   align-items: center;
   transform: rotate3d(1, 0, 0, 45deg);
-  opacity: 0.2;
+  opacity: 0.5;
 }
 
 .box{
@@ -140,60 +113,43 @@ footer span {
   width: 5px;
   opacity: 0.5;
   
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .hour{
   height: 140px;
   width: 10px;
   opacity: 0.5;
-  
-  background-color: white;
+  background-color: #ffffff;
 }
 
 @media screen and (min-width: 480px) {
-	#clock {
+	#digitalClock {
 		font-size: 6em;
 	}
 }
 @media screen and (min-width: 640px) {
-	#clock {
+	#digitalClock {
 		font-size: 10em;
+	}
+	footer span {
+		padding: 0;
+	}
+	footer span .longLabel {
+		display: inline-block;
 	}
 }
 @media screen and (min-width: 768px) {
-	#clock {
+	#digitalClock {
 		font-size: 14em;
-	}
-	@keyframes stars{
-		0% {background-size: 100%, 100%;background-position-y: 150%, 100%;}
-		100% {background-size: 100%, 100%;background-position-y: 150%,200%;}
-	}
-
-	@keyframes morning {
-		0% {background-color:#000000;background-position-y: 150%, 100%;}
-		100% {background-color:#e09572;background-position-y: 125%, 100%;}
-	}
-
-	@keyframes afternoon {
-		0% {background-color:#e09572;background-position-y: 125%, 100%;}
-		100% {background-color:#e0bfb0;background-position-y: 100%, 100%;}
-	}
-	@keyframes evening {
-		0% {background-color:#e0bfb0;background-position-y: 100%, 100%;}
-		100% {background-color:#94624b;background-position-y: 125%, 100%;}
-	}
-	@keyframes night {
-		0% {background-color:#94624b;background-position-y: 125%, 100%;}
-		100% {background-color:#000000;background-position-y: 150%, 100%;}
 	}
 }
 @media screen and (min-width: 1024px) {
 
-	#clock {
+	#digitalClock {
 		font-size: 18em;
 	}
-	#container {
+	#analogClock {
 		width: 500px;
 		height: 500px;
 	    position: absolute;
@@ -214,26 +170,5 @@ footer span {
 }
 
 @media screen and (min-width: 1440px) {
-	@keyframes stars{
-		0% {background-size: 100%, 100%;background-position-y: 400%, 100%;}
-		100% {background-size: 100%, 100%;background-position-y: 400%,200%;}
-	}
 
-	@keyframes morning {
-		0% {background-color:#000000;background-position-y: 400%, 100%;}
-		100% {background-color:#e09572;background-position-y: 300%, 100%;}
-	}
-
-	@keyframes afternoon {
-		0% {background-color:#e09572;background-position-y: 300%, 100%;}
-		100% {background-color:#e0bfb0;background-position-y: 200%, 100%;}
-	}
-	@keyframes evening {
-		0% {background-color:#e0bfb0;background-position-y: 200%, 100%;}
-		100% {background-color:#94624b;background-position-y: 300%, 100%;}
-	}
-	@keyframes night {
-		0% {background-color:#94624b;background-position-y: 300%, 100%;}
-		100% {background-color:#000000;background-position-y: 400%, 100%;}
-	}
 }
