--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,19 @@ section {
 #ripleyOuter {
 	position: absolute;
 	bottom: 0;
+	right: 0;
 	overflow: hidden;
 	width: 300px;
 	height: 600px;
 }
+
+#ripleySpeaks {
+	color: #fff;
+	font-family: Work Regular;
+	font-size: 40px;
+	margin: 40px;
+}
+
 #ripley {
 	position: absolute;
 	width: 300px;
@@ -54,6 +63,8 @@ footer {
 	bottom: 0;
 	font-family: Work Regular;
 }
+
+#mute {display: none;}
 
 footer span {
 	cursor: pointer;
