--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ footer div {
 	display: inline-block;
 }
 
-footer div .longLabel {
+footer .longLabel {
 	display: none;
 }
 
@@ -93,8 +93,8 @@ footer div .longLabel {
   background: url('../img/wijzerplaat.png') center center no-repeat;
   background-size: 100%;
   margin: 0 auto;
-  height: 480px;
-  width: 480px;
+  height: 300px;
+  width: 300px;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -112,14 +112,14 @@ footer div .longLabel {
 
 
 .second{
-  height: 180px;
+  height: 130px;
   width: 2px;
   opacity: 0.5;
   background-color: white;
 }
 
 .minute{
-  height: 160px;
+  height: 100px;
   width: 5px;
   opacity: 0.5;
   
@@ -127,7 +127,7 @@ footer div .longLabel {
 }
 
 .hour{
-  height: 140px;
+  height: 70px;
   width: 10px;
   opacity: 0.5;
   background-color: #ffffff;
