--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,7 @@
   src: url(../fonts/WorkSans-Regular.ttf);
 }
 
-* {
-	box-sizing: border-box;
-}
+* {box-sizing: border-box;}
 
 html {
 	background: #000000;
